2006-11-18  Derek Scherger  <derek@echologic.com>

	* automate.cc (struct inventory_itemizer): account for inodeprints
	code moving into struct workspace; merge fixups
	* inodeprint.hh (inodeprint_file): move declaration above
	inodeprint_unchanged which seems to need it
	* roster.cc (update_current_roster_from_filesystem): 
	* work.{cc,hh} (in_inodeprints_mode): 
	(read_inodeprints):
	(write_inodeprints): make these available in struct workspace so
	that inventory can use them
	(inodeprint_unchanged): removed again; previously moved to
	inodeprint.hh; merges seem to keep resurrecting this
	(classify_roster_paths): removed again; merges seem to keep
	resurrecting this

2006-11-13  Thomas Moschny  <thomas.moschny@gmx.de>

	* cmd_diff_log.cc (CMD(log)): Fix-ups from last propagate nvm ->
	nvm.heights.
	* revision.cc (CMD(rev_height)): dito.

2006-11-11  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.hh, rev_height.cc: remove the dump method, add an
	overload to the dump function to make heights work with MM().
	* database.cc (put_height_for_revision): Add some MM() calls.
	
2006-11-11  Nathaniel Smith  <njs@pobox.com>

	* notes/: New directory for developer docs.
	* notes/release-checklist.txt: Neaten up my release checklist and
	commit it.
	* tests/README, tester.txt, testsuite.txt: Move to notes/.
	* HACKING: Add a mention of notes/.

2006-11-11  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Set release date.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* debian/control (Build-Depends): Remove
	libboost-program-options-dev.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE, configure.ac, monotone.spec, debian/changelog:
	* win32/monotone.iss, visualc/config.h: Bump version numbers to
	0.31.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* INSTALL: Remove libboost-program-options-dev from the list of
	debian packages.

	* NEWS: First draft of 0.31 release notes.
	
2006-11-06  Thomas Keller <me@thomaskeller.biz>
